  * the epimgconv utility has a graphical user interface now, and it can
    also convert images to TVC format
  * various improvements and new features in the epcompress utility
  * the debugger window has been made resizeable within a limited range
  * fixed bug in re-opening files selected with a file chooser dialog
  * fixed FILE device bug in EXOS 10 with files larger than 64 KB
  * some other bug fixes

Changes in version 2.0.10
-------------------------

  * implemented mouse (EnterMice) support in the Enterprise emulation
  * when loading a snapshot from the command line, the machine type is
    autodetected from the file if not specified
  * window icons have been implemented on non-Windows platforms if the
    emulator is built with FLTK 1.3.3 or newer
  * on the Enterprise and CPC, the external joysticks can now have a
    second and third fire button, configured as keys 0x75-0x76 (EXT1)
    and 0x7D-0x7E (EXT2)
  * more accurate emulation of NICK port reading and floating data bus
  * improved timing accuracy of NICK and DAVE port I/O (this may break
    compatibility with some demo files recorded with older versions)
  * implemented EXOS function 10 (set and read channel status) in the
    FILE: device and epfileio.rom
  * screenshots are saved in PNG format instead of BMP
  * new Lua functions: writeROM(), writeWordROM(), and loadROMSegment()
  * building with Lua 5.2 or 5.3 is now supported
  * added support for building 64-bit Windows binaries
  * OpenGL has been made an optional dependency at compile time
  * epimgconv and other utilities are included with the emulator package
  * snapshot and demo files can be compressed in epcompress format
  * experimental SD card emulation using code from LGB's Xep128,
    included only if enabled at compile time
  * various bug fixes and minor optimizations

Changes in version 2.0.9.1
--------------------------

  * some debugger changes related to ignore breakpoints