@@ -1,7 +1,7 @@
 
 // ep128emu -- portable Enterprise 128 emulator
-// Copyright (C) 2003-2010 Istvan Varga <istvanv@users.sourceforge.net>
-// http://sourceforge.net/projects/ep128emu/
+// Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
+// https://sourceforge.net/projects/ep128emu/
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -21,6 +21,7 @@
 #include "display.hpp"
 #include "snd_conv.hpp"
 #include "videorec.hpp"
+#include "system.hpp"
 
 #include <cmath>
 
@@ -169,7 +170,7 @@ namespace Ep128Emu {
     closeFile();
     if (fileName == (char *) 0 || fileName[0] == '\0')
       return;
-    aviFile = std::fopen(fileName, "wb");
+    aviFile = fileOpen(fileName, "wb");
     if (!aviFile)
       throw Exception("error opening AVI file");
     framesWritten = 0;
